Diseño Dia 1 Completado

--- a/Dia1_Hello_World/dia1.html
+++ b/Dia1_Hello_World/dia1.html
@@ -17,7 +17,8 @@
       <h2>Python</h2>
       <p>print("Hola Mundo!");</p>
       <h2>HTML</h2>
-      <p>&lt;p&gt;Hola mundo &lt;/p&gt;</p>
+      <p>&lt;p&gt;Hola mundo&lt;/p&gt;</p>
+      <span>De @alcalacar con mucho &#9829;</span>
     </main>
     
   </body>
