Se integro una pagina principal :D

--- a/Dias/dia1.html
+++ b/Dias/dia1.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dia 1 - Coding Challenge</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/dias.css" />
+    
   </head>
   <body>
+    <header>
+      <nav>
+          <ul>
+          <li>@alcalacar</li>
+          <li><a href="../index.html" class="button-home">Home</a></li>
+          </ul>
+      </nav>
+  </header>
     <main>
       <h1>Reto Dia 1 : Hola Mundo!</h1>
       <h2>C</h2>
