Nueva combinación de colores con tonalidades de marron

--- a/Dias/dia1.html
+++ b/Dias/dia1.html
@@ -5,31 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dia 1 - Coding Challenge</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link
+      rel="shortcut icon"
+      href="https://i.imgur.com/t6aH7bK.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/dias.css" />
-    
   </head>
   <body>
     <header>
       <nav>
-          <ul>
+        <ul>
           <li>@alcalacar</li>
           <li><a href="../index.html" class="button-home">Home</a></li>
-          </ul>
+        </ul>
       </nav>
-  </header>
+    </header>
     <main>
       <h1>Reto Dia 1 : Hola Mundo!</h1>
       <h2>C</h2>
-      <p>printf("Hola Mundo!");</p>
+      <p class="code">printf("Hola Mundo!");</p>
       <h2>Java</h2>
-      <p>System.out.println("Hola Mundo!");</p>
+      <p class="code">System.out.println("Hola Mundo!");</p>
       <h2>Python</h2>
-      <p>print("Hola Mundo!");</p>
+      <p class="code">print("Hola Mundo!")</p>
       <h2>HTML</h2>
-      <p>&lt;p&gt;Hola mundo&lt;/p&gt;</p>
-      <span>De @alcalacar con mucho &#9829;</span>
+      <p class="code">&lt;p&gt;Hola mundo&lt;/p&gt;</p>
+      <span class="main-footer"
+        >De @alcalacar aprendiendo en Platzi con mucho &#9829;</span
+      >
     </main>
-    
   </body>
 </html>
