--- a/index.html
+++ b/index.html
@@ -1,44 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reto 100 dias</title>
-    <link rel="shortcut icon" href="https://i.imgur.com/K2fJ1rI.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="https://i.imgur.com/K2fJ1rI.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-            <li>@alcalacar</li>
-            <li><a href="#" class="button-home">Home</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li>@alcalacar</li>
+          <li><a href="#" class="button-home">Home</a></li>
+        </ul>
+      </nav>
     </header>
     <main class="main-table">
-        <ul class="main-day-list">
-            <li><a  class="day-done" href="./Dias/dia1.html">Día 1</a></li>
-            <li><a href="#" >Día 2</a></li>
-            <li><a href="#">Día 3</a></li>
-            <li><a href="#">Día 4</a></li>
-            <li><a href="#">Día 5</a></li>
-            <li><a href="#">Día 6</a></li>
-            <li><a href="#">Día 7</a></li>
-            <li><a href="#">Día 8</a></li>
-            <li><a href="#">Día 9</a></li>
-            <li><a href="#">Día 10</a></li>
-            <li><a href="#">Día 11</a></li>
-            <li><a href="#">Día 12</a></li>
-            <li><a href="#">Día 13</a></li>
-            <li><a href="#">Día 14</a></li>
-            <li><a href="#">Día 15</a></li>
-            <li><a href="#">Día 16</a></li>
-            <li><a href="#">Día 17</a></li>
-            <li><a href="#">Día 18</a></li>
-            <li><a href="#">Día 19</a></li>
-        </ul>
+      <ul class="main-day-list">
+        <li><a class="day-done" href="./Dias/dia1.html">Día 1</a></li>
+        <li><a href="#">Día 2</a></li>
+        <li><a href="#">Día 3</a></li>
+        <li><a href="#">Día 4</a></li>
+        <li><a href="#">Día 5</a></li>
+        <li><a href="#">Día 6</a></li>
+        <li><a href="#">Día 7</a></li>
+        <li><a href="#">Día 8</a></li>
+        <li><a href="#">Día 9</a></li>
+        <li><a href="#">Día 10</a></li>
+        <li><a href="#">Día 11</a></li>
+        <li><a href="#">Día 12</a></li>
+        <li><a href="#">Día 13</a></li>
+        <li><a href="#">Día 14</a></li>
+        <li><a href="#">Día 15</a></li>
+        <li><a href="#">Día 16</a></li>
+        <li><a href="#">Día 17</a></li>
+        <li><a href="#">Día 18</a></li>
+        <li><a href="#">Día 19</a></li>
+        <li><a href="#">Día 20</a></li>
+        <li><a href="#">Día 21</a></li>
+        <li><a href="#">Día 22</a></li>
+        <li><a href="#">Día 23</a></li>
+        <li><a href="#">Día 24</a></li>
+        <li><a href="#">Día 25</a></li>
+        <li><a href="#">Día 26</a></li>
+        <li><a href="#">Día 27</a></li>
+        <li><a href="#">Día 28</a></li>
+        <li><a href="#">Día 29</a></li>
+        <li><a href="#">Día 30</a></li>
+        <li><a href="#">Día 31</a></li>
+        <li><a href="#">Día 32</a></li>
+        <li><a href="#">Día 33</a></li>
+        <li><a href="#">Día 34</a></li>
+        <li><a href="#">Día 35</a></li>
+        <li><a href="#">Día 36</a></li>
+        <li><a href="#">Día 37</a></li>
+        <li><a href="#">Día 38</a></li>
+        <li><a href="#">Día 39</a></li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
